rename pkg info

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,13 +1,23 @@
 lzc-sdk-version: "0.1"
 name: Linux Command
-package: cloud.lazycat.app.linux-command
+package: shiina.lzcapp.linuxcommand
 version: 1.20.0
 description: Linux命令大全搜索工具，内容包含Linux命令手册、详解、学习、搜集。
 homepage: https://github.com/jaywcjlove/linux-command
 author: jaywcjlove
 application:
-  subdomain: linux-command
+  subdomain: linuxcommand
   routes:
     - /=file:///lzcapp/pkg/content
   public_path:
     - /
+locales:
+  zh:
+    name: "Linux命令手册"
+    description: "Linux命令大全"
+  zh_CN:
+    name: "Linux命令手册"
+    description: "Linux命令大全"
+  en:
+    name: "Linux Command"
+    description: "Linux Command cheat sheet"
